2006-04-01  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: fixed sensitivity setting of "Fullscreen" Menuitem
	and sensitifity when leaving fullscreen mode (fixes REOP #336575 and
	an issue seen by a code review)

2006-04-01  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: fixed framesize calculation of video
	frame (fixes #336572)

2006-03-30  Jan Schampera <jan.schampera@unix.net>

	* src/gui/addressbook.cpp: added "New contact" to the contacts
	context menu (fixes #336588)

2006-03-30  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Made sensitivity of the zoom related menuitems
	dependant on the actual zoom factor (fixes #336575)

2006-03-29  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts.h, lib/gmcontacts/gmcontacts-eds.cpp,
	lib/gmcontacts/gmcontacts-gmconf.cpp: Added the gmcontact_copy
	function call. Fixes #336464.
	* lib/gmcontacts/gmcontacts-eds.cpp: Made use of it to simplify code.

2006-03-29  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts.h: Made a contact state an enum instead of
	magic values. Fixes #336445.
	* lib/gmcontacts/gmcontacts-avahi.cpp,
	lib/gmcontacts/gmcontacts-eds.cpp,
	lib/gmcontacts/gmcontacts-gmconf.cpp,
	lib/gmcontacts/gmcontacts-ldap.cpp, src/gui/addressbook.cpp: Made use
	of the previous.

2006-03-27  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-ldap.cpp: Fixed ILS server browsing.

2006-03-27  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Make sure the reason of the end of the 
	call is always the last thing displayed in the status bar.

2006-03-27  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Reverted the transition to pure GOption, since it
	makes our dependancies too harsh.

2006-03-27  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Reverted the transition to pure GOption, since it
	makes our dependancies too harsh.

2006-03-26  Julien Puydt  <jpuydt@free.fr>
