@@ -37,6 +37,8 @@ factor (fixes #336575) (Jan Schampera)
 - fixed sensitivity setting of "Fullscreen" Menuitem and sensitifity when
 leaving fullscreen mode (fixes REOP #336575 and an issue seen by
 a code review) (Jan Schampera)
+- fixed a bug in wrapper code for GtkTextView that made it non-selectable text (occured in chat window) (fixes #336789) (Jan Schampera)
+
 
 Fixes in OPAL/PWLIB/Ekiga since 2.00 Beta2:
 - Added back StaticPicture in the druid and use the default Ekiga logo
