@@ -1,3 +1,9 @@
+2006-04-02  Jan Schampera <jan.schampera@unix.net>
+
+	* lib/gui/gmtextviewaddon.c: fixed a bug in wrapper code for
+	GtkTextView that made it non-selectable text (occured in
+	chat window) (fixes #336789)
+
 2006-04-01  Jan Schampera <jan.schampera@unix.net>
 
 	* src/gui/main.cpp: fixed sensitivity setting of "Fullscreen" Menuitem
